--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <header>
         <!-- Naviagtion Bar -->
         <nav
-          class="navbar navbar-expand-md nav-fill w-100"
+          class="navbar navbar-expand-lg nav-fill w-100"
           style="height: 88px"
         >
           <div class="container-fluid">
@@ -49,7 +49,10 @@
                 href="#"
                 ><u>STUDY LINK</u></a
               >
-              <button id="nav-hidden-button" style="padding: 0.375rem 0.75rem">
+              <button
+                id="nav-hidden-button"
+                style="padding: 0.375rem 0.75rem; visibility: hidden"
+              >
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div
@@ -66,59 +69,56 @@
               id="offcanvasMenu"
             >
               <div
-                class="ms-md-auto d-flex flex-column flex-md-row align-items-center gap-0 gap-md-3 gap-xl-5 pt-3 pt-md-0"
+                class="ms-lg-auto d-flex flex-column-reverse flex-lg-row align-items-center gap-0 gap-lg-3 gap-xl-4 pt-3 pt-lg-0"
               >
-                <div class="order-1 order-md-0 nav-list-item">
-                  <ul class="navbar-nav mt-2 mt-md-0 align-items-md-center">
+                <div class="nav-list-item">
+                  <ul class="navbar-nav mt-2 mt-lg-0 align-items-lg-center">
                     <div
-                      class="divider-nav-menu d-none d-md-inline mx-md-2 mx-lg-3 mx-xl-4"
+                      class="divider-nav-menu d-none d-md-inline mx-lg-3 mx-xl-4"
                     ></div>
                     <li class="nav-item">
                       <a
-                        class="nav-link text-start ps-4 ps-md-0 pe-0 scale-text"
+                        class="text-start ps-4 ps-lg-0 pe-0 scale-text"
                         href="#"
                         >講座案内</a
                       >
                     </li>
-                    <div class="divider-nav-menu mx-md-2 mx-lg-3 mx-xl-4"></div>
+                    <div class="divider-nav-menu mx-lg-3 mx-xl-4"></div>
                     <li class="nav-item">
                       <a
-                        class="nav-link text-start ps-4 ps-md-0 pe-0 scale-text"
+                        class="text-start ps-4 ps-lg-0 pe-0 scale-text"
                         href="#"
                         >受講プラン案内</a
                       >
                     </li>
-                    <div class="divider-nav-menu mx-md-2 mx-lg-3 mx-xl-4"></div>
+                    <div class="divider-nav-menu mx-lg-3 mx-xl-4"></div>
                     <li class="nav-item">
                       <a
-                        class="nav-link text-start ps-4 ps-md-0 pe-0 scale-text"
+                        class="text-start ps-4 ps-lg-0 pe-0 scale-text"
                         href="#"
                         >利用案内</a
                       >
                     </li>
-                    <div class="divider-nav-menu mx-md-2 mx-lg-3 mx-xl-4"></div>
+                    <div class="divider-nav-menu mx-lg-3 mx-xl-4"></div>
                     <li class="nav-item">
                       <a
-                        class="nav-link text-start ps-4 ps-md-0 pe-0 scale-text"
+                        class="text-start ps-4 ps-lg-0 pe-0 scale-text"
                         href="#"
                         >よくある質問</a
                       >
                     </li>
-                    <div class="divider-nav-menu mx-md-2 mx-lg-3 mx-xl-4"></div>
+                    <div class="divider-nav-menu mx-lg-3 mx-xl-4"></div>
                     <li class="nav-item">
                       <a
-                        class="nav-link text-start ps-4 ps-md-0 pe-0 scale-text"
+                        class="text-start ps-4 ps-lg-0 pe-0 scale-text"
                         href="#"
                         >お問い合わせ</a
                       >
                     </li>
-                    <div class="divider-nav-menu d-inline d-md-none"></div>
+                    <div class="divider-nav-menu d-inline d-lg-none"></div>
                   </ul>
                 </div>
-                <div
-                  class="order-0 order-md-1 px-4 px-md-0 button-box-custom"
-                  id="notLoggedIn"
-                >
+                <div class="px-4 px-lg-0 button-box-custom" id="notLoggedIn">
                   <button
                     type="button"
                     class="rounded-pill border border-2 border-primary bg-white text-primary flex-grow-1 scale-text"
@@ -135,38 +135,49 @@
                     ログイン
                   </button>
                 </div>
-                <div class="logged-container" id="loggedIn">
+                <div class="logined-container" id="loggedIn">
                   <div
-                    class="d-flex flex-column scale-text"
-                    style="font-weight: 500"
+                    class="d-flex flex-column flex-lg-row gap-3 logined-item course-info-nav"
                   >
-                    <p style="margin: 0">受講期間</p>
-                    <p style="margin: 0">2022/10/01 - 2023/10/01</p>
+                    <div
+                      class="d-flex flex-row flex-lg-column gap-2 gap-lg-0 scale-text"
+                      style="font-weight: 500"
+                    >
+                      <p style="margin: 0">受講期間</p>
+                      <p style="margin: 0">2022/10/01 - 2023/10/01</p>
+                    </div>
+                    <div
+                      class="d-flex flex-column"
+                      style="font-size: 14px; font-weight: 500"
+                    >
+                      <p class="scale-text">20単位プラン受講中</p>
+                      <p class="scale-text" style="color: red">
+                        未受講效：10講座（單位）
+                      </p>
+                    </div>
+
+                    <div>
+                      <button
+                        type="button"
+                        class="btn btn-warning rounded-pill scale-text"
+                        style="
+                          font-size: 0.6vw;
+                          height: fit-content;
+                          flex-shrink: 0;
+                        "
+                      >
+                        今すぐ受講▶▶
+                      </button>
+                    </div>
                   </div>
+
                   <div
-                    class="d-flex flex-column"
-                    style="font-size: 14px; font-weight: 500"
+                    class="avatar-circle notification-icon"
+                    style="width: 40px; height: 40px"
                   >
-                    <p class="scale-text">20単位プラン受講中</p>
-                    <p class="scale-text" style="color: red">
-                      未受講效：10講座（單位）
-                    </p>
-                  </div>
-                  <button
-                    type="button"
-                    class="btn btn-warning rounded-pill scale-text"
-                    style="
-                      font-size: 0.6vw;
-                      height: fit-content;
-                      flex-shrink: 0;
-                    "
-                  >
-                    今すぐ受講▶▶
-                  </button>
-                  <div class="avatar-circle" style="width: 40px; height: 40px">
                     <span class="fa">&#xf0f3;</span>
                   </div>
-                  <div class="d-flex gap-2">
+                  <div class="d-flex gap-2 logined-item user-info-nav">
                     <div
                       class="avatar-circle"
                       style="
@@ -182,30 +193,15 @@
                       style="font-size: 12px"
                     >
                       <p style="margin: 0">受講者1</p>
-                      <button
-                        class="navbar-toggler"
-                        type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#navbarNavDarkDropdown"
-                        aria-controls="navbarNavDarkDropdown"
-                        aria-expanded="false"
-                        aria-label="Toggle navigation"
-                      >
-                        <span class="navbar-toggler-icon"></span>
-                      </button>
                       <div
-                        class="collapse navbar-collapse"
+                        class="collapse navbar-collapse show"
                         id="navbarNavDarkDropdown"
                       >
                         <ul class="navbar-nav">
                           <li class="nav-item dropdown">
                             <a
-                              class="nav-link dropdown-toggle"
-                              style="
-                                padding: 0;
-                                font-size: 12px;
-                                font-weight: 600;
-                              "
+                              class="dropdown-toggle scale-text"
+                              style="padding: 0; font-weight: 600"
                               href="#"
                               id="navbarDarkDropdownMenuLink"
                               role="button"
