--- a/index.html
+++ b/index.html
@@ -121,19 +121,19 @@
                 <div class="px-4 px-lg-0 button-box-custom" id="notLoggedIn">
                   <button
                     type="button"
-                    class="rounded-pill border border-2 border-primary bg-white text-primary flex-grow-1 scale-text"
-                    style="padding-left: 24px; padding-right: 24px"
+                    class="rounded-pill bg-white flex-grow-1 scale-text sign-in-button"
                     onclick="login()"
                   >
                     新規登録
                   </button>
-                  <button
+                  <a
                     type="button"
-                    class="btn rounded-pill bg-primary text-white flex-grow-1 scale-text"
+                    class="btn rounded-pill text-white flex-grow-1 scale-text sign-up-button"
                     style="padding-left: 24px; padding-right: 24px"
+                    href="#"
                   >
                     ログイン
-                  </button>
+                </a>
                 </div>
                 <div class="logined-container" id="loggedIn">
                   <div
