--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     type="button"
                     class="btn rounded-pill text-white flex-grow-1 scale-text sign-up-button"
                     style="padding-left: 24px; padding-right: 24px"
-                    href="#"
+                    href="pages/signup.html"
                   >
                     ログイン
                 </a>
