--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
                   </button>
                   <a
                     type="button"
-                    class="btn rounded-pill text-white flex-grow-1 scale-text sign-up-button"
+                    class="btn rounded-pill text-white flex-grow-1 scale-text sign-in-button"
                     style="padding-left: 24px; padding-right: 24px"
-                    href="pages/signup.html"
+                    href="pages/signin.html"
                   >
                     ログイン
                 </a>
