Add forgot page

--- a/pages/forgot-password.html
+++ b/pages/forgot-password.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <link rel="stylesheet" href="../css/signin.css" />
+    <link rel="stylesheet" href="../css/forgot-password.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -121,14 +121,14 @@
                 <div class="px-4 px-lg-0 button-box-custom" id="notLoggedIn">
                   <button
                     type="button"
-                    class="rounded-pill bg-white flex-grow-1 scale-text sign-in-button"
+                    class="rounded-pill bg-white flex-grow-1 scale-text page-button"
                     onclick="login()"
                   >
                     新規登録
                   </button>
                   <a
                     type="button"
-                    class="btn rounded-pill text-white flex-grow-1 scale-text sign-in-button"
+                    class="btn rounded-pill text-white flex-grow-1 scale-text page-button"
                     style="padding-left: 24px; padding-right: 24px"
                     href="#"
                   >
@@ -270,53 +270,32 @@
             alt="background"
           />
 
-          <div class="sign-in-form-container">
+          <div class="page-form-container">
             <div class="path-container">
               <span><i class="fa-solid fa-house"></i></span>
               <p class="shrink-p">\</p>
-              <p class="shrink-p" style="color: #1a2d44">ログイン</p>
+              <p class="shrink-p" style="color: #1a2d44">バスワード忘れ</p>
             </div>
-            <div class="sign-in-form">
-              <p class="shrink-p sign-in-title">ログイン</p>
+            <div class="page-form">
+              <p class="shrink-p page-title">パスワード忘れ</p>
               <div class="form-group">
-                <label class="form-label"
-                  >メールアドレス: <span class="required">*</span></label
-                >
-                <input type="email" class="form-input" placeholder="" />
-              </div>
-              <div class="form-group">
-                <label class="form-label"
-                  >パスワード: <span class="required">*</span></label
-                >
-                <div class="input-container">
+                <p class="shrink-p email-title">
+                  登録メールアドレスを入力してください。
+                </p>
+                <p class="shrink-p email-title">
+                  お忘れの場合、STUDY LINK管理者までお問い合わせください。
+                </p>
+                <div class="email-input-group">
                   <input
-                    type="password"
-                    id="password"
-                    class="form-input"
-                    placeholder=""
+                    type="email"
+                    class="form-input email-input"
+                    placeholder="メールアドレスを入力してください..."
                   />
-                  <span
-                    toggle="#password"
-                    class="toggle-password fas fa-eye"
-                    onclick="togglePassword()"
-                  ></span>
+                  <button class="btn page-form-button submit-email-buttom">
+                    <span><i class="fa-solid fa-arrow-right"></i></span>
+                  </button>
                 </div>
-                <div class="checkbox-container">
-                  <input type="checkbox" id="remember" />
-                  <label for="remember">ログイン情報保存</label>
-                </div>
-              </div>
-              <button class="btn rounded-pill sign-in-form-button">
-                サインイン
-              </button>
-              <p class="shrink-p forgot-text">パスワード忘れた方？</p>
-              <div class="can-login-text-group">
-                <span><i class="fa-solid fa-circle-question"></i></span>
-                <a
-                  class="shrink-p can-login-text"
-                  href="../pages/forgot-password.html"
-                  >ログインできない方はこちら</a
-                >
+                <a class="shrink-p back-to-login" href="javascript:history.back()">サインインに戻り</a>
               </div>
             </div>
           </div>
@@ -353,7 +332,7 @@
       </footer>
     </div>
 
-    <script src="../js/signin.js"></script>
+    <script src="../js/forgot-password.js"></script>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
