--- a/pages/signin.html
+++ b/pages/signin.html
@@ -46,7 +46,7 @@
               </button>
               <a
                 class="navbar-brand mx-0 flex-grow-1 text-center text-lg-start fs-5 fs-md-3 logo-text"
-                href="#"
+                href="../index.html"
                 ><u>STUDY LINK</u></a
               >
               <button
