Add change password page

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                 </div>
                               </li>
                               <li>
-                                <div class="dropdown-item d-flex gap-2">
+                                <div class="dropdown-item d-flex gap-2" onclick="location.href='./pages/change-password.html';">
                                   <span
                                     ><i class="fa-solid fa-pen-to-square"></i
                                   ></span>
