--- a/pages/change-password.html
+++ b/pages/change-password.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <link rel="stylesheet" href="../css/signin.css" />
+    <link rel="stylesheet" href="../css/change-password.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -121,14 +121,14 @@
                 <div class="px-4 px-lg-0 button-box-custom" id="notLoggedIn">
                   <button
                     type="button"
-                    class="rounded-pill bg-white flex-grow-1 scale-text sign-in-button"
+                    class="rounded-pill bg-white flex-grow-1 scale-text page-button"
                     onclick="login()"
                   >
                     新規登録
                   </button>
                   <a
                     type="button"
-                    class="btn rounded-pill text-white flex-grow-1 scale-text sign-in-button"
+                    class="btn rounded-pill text-white flex-grow-1 scale-text page-button"
                     style="padding-left: 24px; padding-right: 24px"
                     href="#"
                   >
@@ -223,7 +223,10 @@
                                 </div>
                               </li>
                               <li>
-                                <div class="dropdown-item d-flex gap-2" onclick="location.href='./change-password.html';">
+                                <div
+                                  class="dropdown-item d-flex gap-2"
+                                  onclick="location.href='./change-password.html';"
+                                >
                                   <span
                                     ><i class="fa-solid fa-pen-to-square"></i
                                   ></span>
@@ -270,54 +273,70 @@
             alt="background"
           />
 
-          <div class="sign-in-form-container">
+          <div class="page-form-container">
             <div class="path-container">
               <span><i class="fa-solid fa-house"></i></span>
               <p class="shrink-p">\</p>
-              <p class="shrink-p" style="color: #1a2d44">ログイン</p>
+              <p class="shrink-p" style="color: #1a2d44">パスワード変更</p>
             </div>
-            <div class="sign-in-form">
-              <p class="shrink-p sign-in-title">ログイン</p>
+            <div class="page-form">
+              <p class="shrink-p page-title">パスワード変更</p>
               <div class="form-group">
                 <label class="form-label"
-                  >メールアドレス: <span class="required">*</span></label
-                >
-                <input type="email" class="form-input" placeholder="" />
-              </div>
-              <div class="form-group">
-                <label class="form-label"
-                  >パスワード: <span class="required">*</span></label
+                  >現在パスワード: <span class="required">*</span></label
                 >
                 <div class="input-container">
                   <input
                     type="password"
-                    id="password"
+                    id="current-password"
                     class="form-input"
                     placeholder=""
                   />
                   <span
-                    toggle="#password"
-                    class="toggle-password fas fa-eye"
-                    onclick="togglePassword()"
+                    toggle="#current-password"
+                    class="toggle-password toggle-current-password fas fa-eye-slash"
+                    onclick="togglePassword(`current-password`)"
                   ></span>
                 </div>
-                <div class="checkbox-container">
-                  <input type="checkbox" id="remember" />
-                  <label for="remember">ログイン情報保存</label>
+              </div>
+              <div class="form-group">
+                <label class="form-label"
+                  >新しいパスワード： <span class="required">*</span></label
+                >
+                <div class="input-container">
+                  <input
+                    type="password"
+                    id="new-password"
+                    class="form-input"
+                    placeholder=""
+                  />
+                  <span
+                    toggle="#new-password"
+                    class="toggle-password toggle-new-password fas fa-eye-slash"
+                    onclick="togglePassword(`new-password`)"
+                  ></span>
                 </div>
               </div>
-              <button class="btn rounded-pill sign-in-form-button">
-                サインイン
-              </button>
-              <p class="shrink-p forgot-text">パスワード忘れた方？</p>
-              <div class="can-login-text-group">
-                <span><i class="fa-solid fa-circle-question"></i></span>
-                <a
-                  class="shrink-p can-login-text"
-                  href="../pages/forgot-password.html"
-                  >ログインできない方はこちら</a
+              <div class="form-group">
+                <label class="form-label"
+                  >新しいパスワード確認： <span class="required">*</span></label
                 >
+                <div class="input-container">
+                  <input
+                    type="password"
+                    id="confirm-password"
+                    class="form-input"
+                    placeholder=""
+                  />
+                  <span
+                    toggle="#confirm-password"
+                    class="toggle-password toggle-confirm-password fas fa-eye-slash"
+                    onclick="togglePassword(`confirm-password`)"
+                  ></span>
+                </div>
               </div>
+
+              <button class="btn rounded-pill btn-warning">パスワード変更</button>
             </div>
           </div>
         </div>
@@ -353,7 +372,7 @@
       </footer>
     </div>
 
-    <script src="../js/signin.js"></script>
+    <script src="../js/change-password.js"></script>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
